# NdkCrash

./: ReadMe.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hd/ndkcrash/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Algorithm.cpp  Algorithm.h  AndroidLog.h  CMakeLists.txt  native-lib.cpp
app/src/main/java/com/hd/ndkcrash/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hd/ndkcrash/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
